--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     <section class="contato" aria-labelledby="cont-title">
       <h3 id="cont-title">Contato</h3>
       <p>Professor Josué Luiz do Carmo — <a href="mailto:seuemail@example.com">seuemail@example.com</a></p>
-      <p><a class="botao-voltar" href="https://josueluiz.github.io/portal-de-projetos/">⬅ Voltar ao Portal de Projetos</a></p>
+      <p><a class="botao-voltar" href="https://josueluizpro.github.io/portal-de-projetos-html/">⬅ Voltar ao Portal de Projetos</a></p>
     </section>
 
   </main>
@@ -182,4 +182,5 @@
     }
   </script>
 </body>
+
 </html>
