--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
       <!-- Foto de perfil no canto direito -->
       <div class="profile">
-        <img src="foto-perfil.jpg" alt="Foto do Professor Josué Luiz" class="profile-img">
+        <img src="IMG_20231014_155627097 (1).jpg" alt="Foto do Professor Josué Luiz" class="profile-img">
         <p class="prof-name">Prof. Josué Luiz do Carmo</p>
       </div>
     </div>
@@ -184,3 +184,4 @@
 </body>
 
 </html>
+
