--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
 
         <div class="card video-card">
           <iframe class="video-card-iframe"
-                  src="https://www.youtube.com/embed/SEU_OUTRO_VIDEO_ID"
+            
+                  src="https://www.youtube.com/embed/nxC869Ziu0g?si=_3DQAwKH5c707rxh"
                   title="Exemplo prático em sala"
                   frameborder="0"
                   allowfullscreen>
@@ -186,5 +187,6 @@
 </body>
 
 </html>
+
 
 
