--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                   allowfullscreen>
           </iframe>
-          <p>Introdução ao DUA — palestra curta.</p>
+          <p>DUA: Desenho Universal para Aprendizagem (Aula Aberta). Todos os creditos Inclutopia</p>
         </div>
 
         <div class="card video-card">
@@ -108,7 +108,8 @@
                   frameborder="0"
                   allowfullscreen>
           </iframe>
-          <p>Registro de atividade em sala aplicando DUA.</p>
+          <p>Desenho Universal para Aprendizagem (DUA). Todos os creditos @ProfessorNedirOficial
+</p>
         </div>
       </div>
     </section>
@@ -187,6 +188,7 @@
 </body>
 
 </html>
+
 
 
 
