--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     <!-- Contato / Sobre (curto) -->
     <section class="contato" aria-labelledby="cont-title">
       <h3 id="cont-title">Contato</h3>
-      <p>Professor Josué Luiz do Carmo — <a href="mailto:seuemail@example.com">seuemail@example.com</a></p>
+      <p>Professor Josué Luiz do Carmo — <a href="josueluiz@prof.educacao.sp.gov.br">seuemail@example.com</a></p>
       <p><a class="botao-voltar" href="https://josueluizpro.github.io/portal-de-projetos-html/">⬅ Voltar ao Portal de Projetos</a></p>
     </section>
 
