--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
     <!-- Seção de vídeos (YouTube) -->
     <section class="videos" aria-labelledby="vid-title">
-      <h3 id="vid-title">Vídeos e registros</h3>
+      <h3 id="vid-title">Vídeos e registros....Em construção, separando evidencias com nossos alunos</h3>
 
       <div class="cards videos-grid">
         <!-- substitua SEU_VIDEO_ID pelo ID do YouTube -->
@@ -188,6 +188,7 @@
 </body>
 
 </html>
+
 
 
 
